<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.laynefong</groupId>
    <artifactId>hodgepodge</artifactId>
    <packaging>pom</packaging>
    <version>1.0.0</version>

    <properties>
        <java.version>11</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>

        <spring-boot.version>2.5.4</spring-boot.version>
        <disruptor.version>3.4.2</disruptor.version>
        <joda-time.version>2.10.3</joda-time.version>
        <fastjson.version>1.2.72</fastjson.version>
        <lombok.version>1.18.12</lombok.version>
        <guava.version>28.2-jre</guava.version>
        <commons-lang3.version>3.12.0</commons-lang3.version>
        <aspectj.version>1.9.4</aspectj.version>
    </properties>


    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>com.laynefong.hodgepodge</groupId>
                <artifactId>starter</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.laynefong.hodgepodge</groupId>
                <artifactId>base</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.laynefong.hodgepodge</groupId>
                <artifactId>i18n</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.laynefong.hodgepodge</groupId>
                <artifactId>queue</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.laynefong.hodgepodge</groupId>
                <artifactId>junit</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.laynefong.hodgepodge</groupId>
                <artifactId>forkjoin</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.laynefong.hodgepodge</groupId>
                <artifactId>disruptor</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.laynefong.hodgepodge</groupId>
                <artifactId>annotation</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-web</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>

            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>

            <dependency>
                <groupId>joda-time</groupId>
                <artifactId>joda-time</artifactId>
                <version>${joda-time.version}</version>
            </dependency>

            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>fastjson</artifactId>
                <version>${fastjson.version}</version>
            </dependency>

            <dependency>
                <groupId>com.lmax</groupId>
                <artifactId>disruptor</artifactId>
                <version>${disruptor.version}</version>
            </dependency>

            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>

            <dependency>
                <groupId>org.aspectj</groupId>
                <artifactId>aspectjtools</artifactId>
                <version>${aspectj.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>2.5.4</version>
            </plugin>
        </plugins>
    </build>

    <modules>
        <module>starter</module>
        <module>base</module>
        <module>i18n</module>
        <module>queue</module>
        <module>junit</module>
        <module>forkjoin</module>
        <module>disruptor</module>
        <module>annotation</module>
    </modules>

</project>